src/parser/StageParser.java
// $ANTLR 3.4 /Users/marc/IdeaProjects/Stage/src/parser/Stage.g 2014-05-29 20:19:19

package parser;
import interp.StageTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class StageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDFILT", "AND", "ARGLIST", "ARRAY", "ASIGEQUAL", "ASSIGN", "BOOLEAN", "BYPASSF", "CBL", "CBR", "CHAR", "COMMENT", "DECLARE", "DIV", "ELSE", "EMPTYFILT", "EQUAL", "ESC_SEQ", "FALSE", "FILTCALL", "FILTER", "FIRST", "FLOAT", "FROM", "FUNCALL", "FUNCTION", "GE", "GT", "ID", "IF", "INPUTS", "INT", "LAST", "LE", "LIST_FILTERS", "LIST_FUNCTIONS", "LIST_INSTR", "LOOP", "LT", "MEMBER", "MINUS", "MOD", "MUL", "NOT", "NOT_EQUAL", "OPERATOR", "OR", "PARAM", "PARAMS", "PLUS", "QUIT", "RETURN", "ROOT", "STRING", "TIMECALL", "TRUE", "UNTIL", "WHILE", "WS", "'('", "')'", "','", "'->'", "';'", "'['", "']'", "'add'", "'after'", "'with'"
    };

    public static final int EOF=-1;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int ADDFILT=4;
    public static final int AND=5;
    public static final int ARGLIST=6;
    public static final int ARRAY=7;
    public static final int ASIGEQUAL=8;
    public static final int ASSIGN=9;
    public static final int BOOLEAN=10;
    public static final int BYPASSF=11;
    public static final int CBL=12;
    public static final int CBR=13;
    public static final int CHAR=14;
    public static final int COMMENT=15;
    public static final int DECLARE=16;
    public static final int DIV=17;
    public static final int ELSE=18;
    public static final int EMPTYFILT=19;
    public static final int EQUAL=20;
    public static final int ESC_SEQ=21;
    public static final int FALSE=22;
    public static final int FILTCALL=23;
    public static final int FILTER=24;
    public static final int FIRST=25;
    public static final int FLOAT=26;
    public static final int FROM=27;
    public static final int FUNCALL=28;
    public static final int FUNCTION=29;
    public static final int GE=30;
    public static final int GT=31;
    public static final int ID=32;
    public static final int IF=33;
    public static final int INPUTS=34;
    public static final int INT=35;
    public static final int LAST=36;
    public static final int LE=37;
    public static final int LIST_FILTERS=38;
    public static final int LIST_FUNCTIONS=39;
    public static final int LIST_INSTR=40;
    public static final int LOOP=41;
    public static final int LT=42;
    public static final int MEMBER=43;
    public static final int MINUS=44;
    public static final int MOD=45;
    public static final int MUL=46;
    public static final int NOT=47;
    public static final int NOT_EQUAL=48;
    public static final int OPERATOR=49;
    public static final int OR=50;
    public static final int PARAM=51;
    public static final int PARAMS=52;
    public static final int PLUS=53;
    public static final int QUIT=54;
    public static final int RETURN=55;
    public static final int ROOT=56;
    public static final int STRING=57;
    public static final int TIMECALL=58;
    public static final int TRUE=59;
    public static final int UNTIL=60;
    public static final int WHILE=61;
    public static final int WS=62;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public StageParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public StageParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return StageParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/marc/IdeaProjects/Stage/src/parser/Stage.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        StageTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:43:1: prog : procedures -> ^( ROOT ( procedures )+ ) ;
    public final StageParser.prog_return prog() throws RecognitionException {
        StageParser.prog_return retval = new StageParser.prog_return();
        retval.start = input.LT(1);


        StageTree root_0 = null;

        StageParser.procedures_return procedures1 =null;


        RewriteRuleSubtreeStream stream_procedures=new RewriteRuleSubtreeStream(adaptor,"rule procedures");
        try {
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:43:9: ( procedures -> ^( ROOT ( procedures )+ ) )
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:43:11: procedures
            {
            pushFollow(FOLLOW_procedures_in_prog222);
            procedures1=procedures();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_procedures.add(procedures1.getTree());

            // AST REWRITE
            // elements: procedures
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StageTree)adaptor.nil();
            // 43:22: -> ^( ROOT ( procedures )+ )
            {
                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:43:25: ^( ROOT ( procedures )+ )
                {
                StageTree root_1 = (StageTree)adaptor.nil();
                root_1 = (StageTree)adaptor.becomeRoot(
                (StageTree)adaptor.create(ROOT, "ROOT")
                , root_1);

                if ( !(stream_procedures.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_procedures.hasNext() ) {
                    adaptor.addChild(root_1, stream_procedures.nextTree());

                }
                stream_procedures.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StageTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StageTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class procedures_return extends ParserRuleReturnScope {
        StageTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "procedures"
    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:1: procedures : ( func | filter )+ EOF -> ^( LIST_FUNCTIONS ( func )* ) ^( LIST_FILTERS ( filter )* ) ;
    public final StageParser.procedures_return procedures() throws RecognitionException {
        StageParser.procedures_return retval = new StageParser.procedures_return();
        retval.start = input.LT(1);


        StageTree root_0 = null;

        Token EOF4=null;
        StageParser.func_return func2 =null;

        StageParser.filter_return filter3 =null;


        StageTree EOF4_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_func=new RewriteRuleSubtreeStream(adaptor,"rule func");
        RewriteRuleSubtreeStream stream_filter=new RewriteRuleSubtreeStream(adaptor,"rule filter");
        try {
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:11: ( ( func | filter )+ EOF -> ^( LIST_FUNCTIONS ( func )* ) ^( LIST_FILTERS ( filter )* ) )
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:13: ( func | filter )+ EOF
            {
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:13: ( func | filter )+
            int cnt1=0;
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNCTION) ) {
                    alt1=1;
                }
                else if ( (LA1_0==FILTER) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:14: func
            	    {
            	    pushFollow(FOLLOW_func_in_procedures239);
            	    func2=func();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_func.add(func2.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:21: filter
            	    {
            	    pushFollow(FOLLOW_filter_in_procedures243);
            	    filter3=filter();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_filter.add(filter3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_procedures247); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF4);


            // AST REWRITE
            // elements: func, filter
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StageTree)adaptor.nil();
            // 45:34: -> ^( LIST_FUNCTIONS ( func )* ) ^( LIST_FILTERS ( filter )* )
            {
                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:37: ^( LIST_FUNCTIONS ( func )* )
                {
                StageTree root_1 = (StageTree)adaptor.nil();
                root_1 = (StageTree)adaptor.becomeRoot(
                (StageTree)adaptor.create(LIST_FUNCTIONS, "LIST_FUNCTIONS")
                , root_1);

                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:54: ( func )*
                while ( stream_func.hasNext() ) {
                    adaptor.addChild(root_1, stream_func.nextTree());

                }
                stream_func.reset();

                adaptor.addChild(root_0, root_1);
                }

                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:61: ^( LIST_FILTERS ( filter )* )
                {
                StageTree root_1 = (StageTree)adaptor.nil();
                root_1 = (StageTree)adaptor.becomeRoot(
                (StageTree)adaptor.create(LIST_FILTERS, "LIST_FILTERS")
                , root_1);

                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:45:76: ( filter )*
                while ( stream_filter.hasNext() ) {
                    adaptor.addChild(root_1, stream_filter.nextTree());

                }
                stream_filter.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StageTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StageTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "procedures"


    public static class func_return extends ParserRuleReturnScope {
        StageTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "func"
    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:48:1: func : FUNCTION (ret= ID )? nam= ID params CBL function_block_instructions CBR -> ^( FUNCTION $nam ( $ret)? params function_block_instructions ) ;
    public final StageParser.func_return func() throws RecognitionException {
        StageParser.func_return retval = new StageParser.func_return();
        retval.start = input.LT(1);


        StageTree root_0 = null;

        Token ret=null;
        Token nam=null;
        Token FUNCTION5=null;
        Token CBL7=null;
        Token CBR9=null;
        StageParser.params_return params6 =null;

        StageParser.function_block_instructions_return function_block_instructions8 =null;


        StageTree ret_tree=null;
        StageTree nam_tree=null;
        StageTree FUNCTION5_tree=null;
        StageTree CBL7_tree=null;
        StageTree CBR9_tree=null;
        RewriteRuleTokenStream stream_FUNCTION=new RewriteRuleTokenStream(adaptor,"token FUNCTION");
        RewriteRuleTokenStream stream_CBL=new RewriteRuleTokenStream(adaptor,"token CBL");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_CBR=new RewriteRuleTokenStream(adaptor,"token CBR");
        RewriteRuleSubtreeStream stream_function_block_instructions=new RewriteRuleSubtreeStream(adaptor,"rule function_block_instructions");
        RewriteRuleSubtreeStream stream_params=new RewriteRuleSubtreeStream(adaptor,"rule params");
        try {
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:48:6: ( FUNCTION (ret= ID )? nam= ID params CBL function_block_instructions CBR -> ^( FUNCTION $nam ( $ret)? params function_block_instructions ) )
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:48:8: FUNCTION (ret= ID )? nam= ID params CBL function_block_instructions CBR
            {
            FUNCTION5=(Token)match(input,FUNCTION,FOLLOW_FUNCTION_in_func272); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_FUNCTION.add(FUNCTION5);


            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:48:20: (ret= ID )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    alt2=1;
                }
            }
            switch (alt2) {
                case 1 :
                    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:48:20: ret= ID
                    {
                    ret=(Token)match(input,ID,FOLLOW_ID_in_func276); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ret);


                    }
                    break;

            }


            nam=(Token)match(input,ID,FOLLOW_ID_in_func281); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(nam);


            pushFollow(FOLLOW_params_in_func283);
            params6=params();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_params.add(params6.getTree());

            CBL7=(Token)match(input,CBL,FOLLOW_CBL_in_func285); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CBL.add(CBL7);


            pushFollow(FOLLOW_function_block_instructions_in_func287);
            function_block_instructions8=function_block_instructions();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_function_block_instructions.add(function_block_instructions8.getTree());

            CBR9=(Token)match(input,CBR,FOLLOW_CBR_in_func289); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CBR.add(CBR9);


            // AST REWRITE
            // elements: ret, function_block_instructions, params, nam, FUNCTION
            // token labels: ret, nam
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleTokenStream stream_ret=new RewriteRuleTokenStream(adaptor,"token ret",ret);
            RewriteRuleTokenStream stream_nam=new RewriteRuleTokenStream(adaptor,"token nam",nam);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StageTree)adaptor.nil();
            // 48:75: -> ^( FUNCTION $nam ( $ret)? params function_block_instructions )
            {
                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:48:78: ^( FUNCTION $nam ( $ret)? params function_block_instructions )
                {
                StageTree root_1 = (StageTree)adaptor.nil();
                root_1 = (StageTree)adaptor.becomeRoot(
                stream_FUNCTION.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_nam.nextNode());

                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:48:95: ( $ret)?
                if ( stream_ret.hasNext() ) {
                    adaptor.addChild(root_1, stream_ret.nextNode());

                }
                stream_ret.reset();

                adaptor.addChild(root_1, stream_params.nextTree());

                adaptor.addChild(root_1, stream_function_block_instructions.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StageTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StageTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "func"


    public static class params_return extends ParserRuleReturnScope {
        StageTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "params"
    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:51:1: params : '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) ;
    public final StageParser.params_return params() throws RecognitionException {
        StageParser.params_return retval = new StageParser.params_return();
        retval.start = input.LT(1);


        StageTree root_0 = null;

        Token char_literal10=null;
        Token char_literal12=null;
        StageParser.paramlist_return paramlist11 =null;


        StageTree char_literal10_tree=null;
        StageTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
        RewriteRuleSubtreeStream stream_paramlist=new RewriteRuleSubtreeStream(adaptor,"rule paramlist");
        try {
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:51:8: ( '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) )
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:51:10: '(' ( paramlist )? ')'
            {
            char_literal10=(Token)match(input,63,FOLLOW_63_in_params315); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_63.add(char_literal10);


            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:51:14: ( paramlist )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:51:14: paramlist
                    {
                    pushFollow(FOLLOW_paramlist_in_params317);
                    paramlist11=paramlist();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_paramlist.add(paramlist11.getTree());

                    }
                    break;

            }


            char_literal12=(Token)match(input,64,FOLLOW_64_in_params320); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_64.add(char_literal12);


            // AST REWRITE
            // elements: paramlist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StageTree)adaptor.nil();
            // 51:29: -> ^( PARAMS ( paramlist )? )
            {
                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:51:32: ^( PARAMS ( paramlist )? )
                {
                StageTree root_1 = (StageTree)adaptor.nil();
                root_1 = (StageTree)adaptor.becomeRoot(
                (StageTree)adaptor.create(PARAMS, "PARAMS")
                , root_1);

                // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:51:41: ( paramlist )?
                if ( stream_paramlist.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramlist.nextTree());

                }
                stream_paramlist.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StageTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StageTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "params"


    public static class paramlist_return extends ParserRuleReturnScope {
        StageTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramlist"
    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:54:1: paramlist : param ( ',' ! param )* ;
    public final StageParser.paramlist_return paramlist() throws RecognitionException {
        StageParser.paramlist_return retval = new StageParser.paramlist_return();
        retval.start = input.LT(1);


        StageTree root_0 = null;

        Token char_literal14=null;
        StageParser.param_return param13 =null;

        StageParser.param_return param15 =null;


        StageTree char_literal14_tree=null;

        try {
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:54:10: ( param ( ',' ! param )* )
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:54:12: param ( ',' ! param )*
            {
            root_0 = (StageTree)adaptor.nil();


            pushFollow(FOLLOW_param_in_paramlist337);
            param13=param();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, param13.getTree());

            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:54:18: ( ',' ! param )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==65) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:54:19: ',' ! param
            	    {
            	    char_literal14=(Token)match(input,65,FOLLOW_65_in_paramlist340); if (state.failed) return retval;

            	    pushFollow(FOLLOW_param_in_paramlist343);
            	    param15=param();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, param15.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StageTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StageTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "paramlist"


    public static class param_return extends ParserRuleReturnScope {
        StageTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "param"
    // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:56:1: param : type= ID id= ID -> ^( PARAM $type $id) ;
    public final StageParser.param_return param() throws RecognitionException {
        StageParser.param_return retval = new StageParser.param_return();
        retval.start = input.LT(1);


        StageTree root_0 = null;

        Token type=null;
        Token id=null;

        StageTree type_tree=null;
        StageTree id_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:56:9: (type= ID id= ID -> ^( PARAM $type $id) )
            // /Users/marc/IdeaProjects/Stage/src/parser/Stage.g:56:11: type= ID id= ID
            {
            type=(Token)match(input,ID,FOLLOW_ID_in_param357); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(type);


            id=(Token)match(input,ID,FOLLOW_ID_in_param361); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(id);

